fix(map): :bug: remove z-index from map component

--- a/src/app/map/feature/map.component.scss
+++ b/src/app/map/feature/map.component.scss
@@ -2,5 +2,4 @@ capacitor-google-map {
   display: inline-block;
   width: 100%;
   height: 100%;
-  z-index: -10;
 }
